--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  box-sizing: border-box !important;
 }
 /*  custom */
 .cp {
@@ -110,4 +107,41 @@ code {
 .spanner.show,
 .overlay.show {
   opacity: 1;
+}
+/* table paginatin css*/
+.paginationBttns {
+  width: 100%;
+  height: 40px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 0.5rem;
+  list-style: none;
+  margin-top: 30px;
+}
+
+.paginationBttns a {
+  padding: 5px 13px;
+  background: white;
+  color: black !important;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  margin: 5px;
+  text-decoration: none !important;
+  border: 1px solid #009688;
+}
+
+.paginationBttns a:hover {
+  background: white;
+  color: black !important;
+}
+.paginationActivePage {
+  background-color: #009688 !important;
+}
+.paginationActivePage a {
+  color: white !important;
 }
