Add css variable in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box !important;
 }
+:root {
+  --primary-color: #009688;
+}
 /*  custom */
 .cp {
   cursor: pointer;
@@ -132,7 +135,7 @@ body {
   cursor: pointer;
   margin: 5px;
   text-decoration: none !important;
-  border: 1px solid #009688;
+  border: 1px solid var(--primary-color);
 }
 
 .paginationBttns a:hover {
@@ -140,7 +143,7 @@ body {
   color: black !important;
 }
 .paginationActivePage {
-  background-color: #009688 !important;
+  background-color: var(--primary-color) !important;
 }
 .paginationActivePage a {
   color: white !important;
